# SekiroNumbersMod

./: .gitattributes  .gitignore  SekiroNumbersMod.csproj  SekiroNumbersMod.sln
DLLInject/: CMakeLists.txt  DLLInjector.cpp
NumbersModDll/: CMakeLists.txt  NumbersMod.cpp  V3.hpp  config.cpp  config.h  data.h  data_reader.hpp  drawer.cpp  drawer.h  includes.h  main.cpp
NumbersModDll/imgui/: CMakeLists.txt  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h
NumbersModDll/kiero-cmake/: CMakeLists.txt
NumbersModDll/kiero-cmake/minhook/dll_resources/: MinHook.aps
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
Scripts/: Config.cs  DataReader.cs  Drawer.cs  FloatingNumber.cs  KeyboardHookEventArgs.cs  Number.cs  OptionsForm.Designer.cs  OptionsForm.cs  Overlay.Designer.cs  Overlay.cs  Overlay.resx  Program.cs
Scripts/Data/: DataReader.cs  Entity.cs  Matrix.cs  V3.cs
